# stm32-playground

./: .gitignore  README.md
documents/: documents.md
stm32f411/: Cargo.toml  openocd_run.gdb
stm32f411/.cargo/: config
stm32f411/src/: main.rs
stm32f767/: Cargo.toml  memory.x
stm32f767/src/: main.rs
